GNOME Bugzilla – Bug 724242
Gesture actions fixes
Last modified: 2014-02-13 17:55:18 UTC
Make them work! :) The first patch makes them actually trigger as we configured it, the second patch makes it more flexible.
Created attachment 268934 [details] [review] GestureActions: Set threshold-trigger-edge at right time It was set during the _init(), and swiftly overridden with the default value in construct. Do it in constructed() instead.
Created attachment 268935 [details] [review] GestureActions: Add per-action thresholds Instead of relying on the dnd drag threshold, add per-action horizontal and vertical thresholds. Use them in the swipe action as well.
Review of attachment 268934 [details] [review]: looks good. other GestureAction sub-classes need to be ported to the same pattern; if you could amend the patch it'd be good for me, but a new commit is fine as well.
Review of attachment 268935 [details] [review]: looks okay, with one minor detail. if you could fix it before pushing it, it would be stellar. ::: clutter/clutter-gesture-action.c @@ +1306,3 @@ + * clutter_gesture_action_get_threshold_trigger_distance: + * @action: a #ClutterGestureAction +{ needs the (out) (allow-none) annotations. @@ +1307,3 @@ + * @action: a #ClutterGestureAction + * @x: The return location for the horizontal distance, or %NULL +{ needs the (out) (allow-none) annotations.
Created attachment 269044 [details] [review] GestureActions: Set threshold-trigger-edge at right time It was set during the _init(), and swiftly overridden with the default value in construct. Do it in constructed() instead.
Created attachment 269045 [details] [review] GestureActions: Add per-action thresholds Instead of relying on the dnd drag threshold, add per-action horizontal and vertical thresholds. Use them in the swipe action as well.
Review of attachment 269044 [details] [review]: looks good.
Review of attachment 269045 [details] [review]: still missing the (out)(allow-none) annotations for the getter function, but looks good.
Created attachment 269050 [details] [review] GestureActions: Add per-action thresholds Instead of relying on the dnd drag threshold, add per-action horizontal and vertical thresholds. Use them in the swipe action as well.
Attachment 269044 [details] pushed as 54e2657 - GestureActions: Set threshold-trigger-edge at right time Attachment 269050 [details] pushed as 32b3d27 - GestureActions: Add per-action thresholds